# ezrasnashim

./: .env  .env.replit  .env.staging.remote  .gitignore  .replit  .replit.production  ANALYTICS_REPORT.md  ANDROID_COMPASS_INVESTIGATION_REPORT.md  APPLE_PAY_SETUP.md  AUDIT_REPORT_AUGUST_18_2025.md  CODEBASE_AUDIT_REPORT.md  COMPASS_STABILITY_REPORT.md  COMPREHENSIVE_AUDIT_AUGUST_19_2025.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_SYSTEM_AUDIT_JULY_2025.md  DEPLOYMENT.md  FINAL_AUDIT_REPORT.md  FLUTTER_CONVERSION_COMPLETE.md  FULL_AUDIT_JULY_2025.md  MEDIA_HOSTING_OPTIONS.md  MOBILE_PERFORMANCE.md  OPTIMIZATION_AUDIT_REPORT.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  PRODUCTION_ENV_VARS.md  PUSH_NOTIFICATION_AUDIT_REPORT.md  STAGING_SETUP_README.md  STYLE_GUIDE.md  SUPABASE_SETUP.md  TEFILLA_CONDITIONAL_CONTENT.md  TEXT_FORMATTING_GUIDE.md  api_service.dart  app.js  build-deploy.mjs  build-fast.mjs  build-production.mjs  build.mjs  complete-project-recreation-instructions.txt  deploy-build.js  deploy-build.sh  (+50 more)
attached_assets/: Pasted---1750789212322_1750789212323.txt  Pasted---1757566470669_1757566470669.txt  Pasted--18-builder-8-8-RUN-npx-tsc-18-4-981-server-routes-ts-1891-56-error-TS2345-Argument-of-type-s-1756068844879_1756068844881.txt  Pasted--MitzvahSync-Starting-login-sync-axiosClient-ts-58-API-_1767112089526.txt  Pasted--Privacy-Policy-Ezras-Nashim-App-Last-Updated-05-05-202_1772706597414.txt  (+40 more)
client/: .env  .env.production  .env.replit  .env.staging  index.html
scripts/python/: chizuk_urls.csv  convert_urls_to_cdn.py  pyproject.toml
(+308 files in other folders)
